management-ui/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: management-ui
spec:
    selector:
        matchLabels:
            app: management-ui
    replicas: 1
    template:
        metadata:
            labels:
                app: management-ui
        spec:
            containers:
            - name: management-ui
              image: cognigy.azurecr.io/management-ui:4f2bd365fa9a2c9cb056cf8e0521c56b19df6763
              resources:
                limits:
                    memory: "30Mi"
                    cpu: "20m"
                requests:
                    memory: "10Mi"
                    cpu: "10m"
            imagePullSecrets:
              - name: cognigy-registry-token
