management-ui/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-ui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: management-ui
    http:
      paths:
      - backend:
          service:
            name: management-ui
            port:
              number: 8000
        path: /
        pathType: Prefix
